fix font color and spacing

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 *{
     font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
+    color: rgba(104, 104, 238, 0.835);
+    letter-spacing: 2px;
+    
 }
 
 body {
